--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<figure class="product-card">
-   <img src=" ./IMG_2748.PNG" alt="..." class="product-card__image"  />
-   <figcaption class="product-card__caption">
-      <header class="product-card__header">
-         <h2 class="product-card__title">Face mask</h2>
-         <p class="product-card__subtitle">Charcoal</p>
-         <link rel="stylesheet" href="style.css"
-      </header>
-      <footer class="product-card__footer">
-         <span class="product-card__price">$38.00</span>
-         <button class="product-card__button">
-            <i class="product-card__icon ri-add-line"></i>
-         </button>
-   </figcaption>
-</figure>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Family Website</title>
+   </head>
+   <body>
+      <figure class="product-card">
+         <img src=" ./IMG_2748.PNG" alt="..." class="product-card__image" />
+         <figcaption class="product-card__caption">
+            <header class="product-card__header">
+               <h2 class="product-card__title">Face mask</h2>
+               <p class="product-card__subtitle">Charcoal</p>
+               <link rel="stylesheet" href="style.css" />
+            </header>
+            <footer class="product-card__footer">
+               <span class="product-card__price">$38.00</span>
+               <button class="product-card__button">
+                  <i class="product-card__icon ri-add-line"></i>
+               </button>
+            </footer>
+         </figcaption>
+      </figure>
+   </body>
+</html>
